# build-tests

./: .gitignore  README.md
.github/workflows/: 1.yaml  1.yml  2.yaml  3.yaml  4.yaml
1/: BUILD  README.md  WORKSPACE
1/src/hdr/: dependency.h
1/src/lib/: dependency.c
1/src/main/: main.c
2/: BUILD  README.md
2/src/main/: main.c
2/src/project1/: BUILD
2/src/project1/hdr/: project1.h
2/src/project1/src/: project1.c
2/src/project2/: BUILD
2/src/project2/hdr/: project2.h
2/src/project2/src/: project2.c
3/: BUILD  README.md  manifest.bzl  process.bzl  untar.bzl
3/lib1/: BUILD
3/lib1/hdr/: lib1.h
3/lib1/src/: lib1.c
3/lib2/: BUILD
3/lib2/hdr/: lib2.h
3/lib2/src/: lib2.c
3/main/src/: app.c
4/: .bazelrc  BUILD.bazel  README.md  WORKSPACE
4/src/: main.c
4/src/hdr/: operation.h
4/src/modules/: free_app.c  pro_app.c
5/: BUILD.bazel  README.md  WORKSPACE.bazel
5/clibrary/: BUILD.bazel
5/clibrary/hdr/: clibrary.h
5/clibrary/src/: clibrary.c
5/src/: script.py
